API docs for getUserFeedHandler Endpoint
